syntax = "proto3";
package message;
option go_package = "serve/servicejili/jili_17_sweetheart/message";

enum Symbol {

    Wild = 0;
    Bonus = 1;
    Symbol1 = 2;
    Symbol2 = 3;
    Symbol3 = 4;
    Symbol4 = 5;
    Symbol5 = 6;
    Symbol6 = 7;
    Symbol7 = 8;
    Symbol8 = 9;
    Symbol9 = 10;
}

message Block {

    uint32 row = 1;
    uint32 column = 2;
}

message Plate {

    repeated ColumnData column = 1;
    repeated Plate.AwardReel award = 2;
    double win = 3;
    uint32 ball_count = 4;
    double bonus_win = 5;

    message AwardReel {

        uint32 line = 1;
        repeated Block block = 2;
        double win = 3;
    }
}

message AllPlate {

    repeated Plate plate = 1;
}

message ColumnData {

    repeated int32 row = 1;
    repeated double bonus = 2;
}